新增合规检测算法,肤质检测算法新增字段

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ leqi/__pycache__
 # Distribution / packaging
 .Python
 venv/
+venv_python38/
 build/
 develop-eggs/
 dist/
@@ -69,4 +70,5 @@ target/
 *.rar
 *.zip
 test/
+saync_test/
 upload.md
